@@ -6,10 +6,11 @@ using LightBDD.Core.Extensibility.Execution;
 namespace LightBDD.Fixie2
 {
     /// <summary>
-    /// Attribute allowing to ignore scenario in declarative way. It can be applied on scenario method or step method.
+    /// Attribute allowing to ignore scenario in declarative way. It can be applied on scenario method or step method as well as feature class.
     /// If applied on scenario, no steps will be executed, but scenario will be included in reports.
+    /// If applied on class level, all scenarios in this class will get ignored.
     /// </summary>
-    [AttributeUsage(AttributeTargets.Method)]
+    [AttributeUsage(AttributeTargets.Method | AttributeTargets.Class)]
     public class IgnoreScenarioAttribute : Attribute, IScenarioDecoratorAttribute, IStepDecoratorAttribute
     {
         /// <summary>
